--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,29 +1,69 @@
-<h2>Sign up</h2>
+<div class="ui centered grid container">
+      <div class="five wide column">
+<h2>Cadastro</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'ui form'}) do |f| %>
+    <%= devise_error_messages! %>
+  
+    <div class="field">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, autofocus: true %>
+    </div>
+  
+    <div class="field">
+      <%= f.label :password %>
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
+      <%= f.password_field :password, autocomplete: "off" %>
+    </div>
+  
+    <div class="field">
+      <%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    </div>
+  
+    <div class="field">
+      <%= f.label :name %><br />
+      <%= f.text_field :name %>
+    </div>
+    
+    <div class="field">
+      <%= f.label :cpf %><br />
+      <%= f.text_field :cpf %>
+    </div>
+    
+    <div class="field">
+      <%= f.label :matriculation %><br />
+      <%= f.text_field :matriculation %>
+    </div>
+    
+    <div class="field">
+      <%= f.label :participation %><br />
+      <%= f.text_field :participation %>
+    </div>
+    
+    <div class="field">
+      <%= f.label :theme %><br />
+      <%= f.collection_select(:theme_id, Theme.all, :id, :name, {}, {:class=>'ui dropdown'}) %>
+    </div>
+    
+    <div class="field">
+      <%= f.label :course %><br />
+      <%= f.collection_select(:course_id, Course.avalaible, :id, :name, {}, {:class=>'ui dropdown'}) %>
+    </div>
+    
+    <div class="actions">
+      <%= f.submit "Cadastrar", class: 'ui button teal' %>
+    </div>
+  <% end %>
+  
+  <%= render "users/shared/links" %>
   </div>
+</div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+<script>
+  $('select.dropdown').dropdown();
+</script>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+<%= render 'layouts/user' %>
