--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,8 @@
   </div>
   
   <%= yield %>
-
+  
+  <%= render 'layouts/alert_messages' %>
 <!-- Footer Contents -->
   <div class="ui inverted vertical footer segment">
     <div class="ui container">
