--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,29 +1,32 @@
-<p id="notice"><%= notice %></p>
+<div class="ui centered grid container">
+    <div class="five large column">
 
-<h1>Listing Courses</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Panelist</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @courses.each do |course| %>
-      <tr>
-        <td><%= course.name %></td>
-        <td><%= course.panelist %></td>
-        <td><%= link_to 'Show', course %></td>
-        <td><%= link_to 'Edit', edit_course_path(course) %></td>
-        <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Course', new_course_path %>
+      <h1>Lista de cursos</h1>
+      
+      <table class="ui table">
+        <thead>
+          <tr>
+            <th>Nome</th>
+            <th>Palestrante</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+      
+        <tbody>
+          <% @courses.each do |course| %>
+            <tr>
+              <td><%= course.name %></td>
+              <td><%= course.panelist %></td>
+              <td><%= link_to 'Show', course, class: 'ui button' %></td>
+              <td><%= link_to 'Editar', edit_course_path(course), class: 'ui button' %></td>
+              <td><%= link_to 'Excluir', course, method: :delete, data: { confirm: 'Você tem certeza?' }, class: 'ui button red' %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+      
+      <br>
+      
+      <%= link_to 'Novo curso', new_course_path, class: 'ui button teal' %>
+  </div>
+</div>
