--- a/app/views/themes/_form.html.erb
+++ b/app/views/themes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@theme) do |f| %>
+<%= form_for(@theme, html: {class: 'ui form'}) do |f| %>
   <% if @theme.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@theme.errors.count, "error") %> prohibited this theme from being saved:</h2>
