--- a/app/views/courses/reporte.pdf.erb
+++ b/app/views/courses/reporte.pdf.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8' />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <%= wicked_pdf_stylesheet_link_tag "pdf" -%>
     <%= wicked_pdf_javascript_include_tag "number_pages" %>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.css" integrity="sha256-8CEI/ltDBxfGb0lev/b4YiRbQSPlllT89ukpFKC3Frg=" crossorigin="anonymous" />
@@ -9,28 +10,27 @@
   <body onload='number_pages'>
     <div class="ui container">
        <div class="ui centered grid container">
-        <div class="ten large column">
+        <div class=" large column">
             <h1>Lista de participantes do curso: <%= @course.name %></h1>
             <h3>Palestrante: <%= @course.panelist %></h3>
             <h3>Total: <%= @course.members_length %></h3>
-            
-            <table class="ui table">
-                <thead>
-                  <tr>
-                    <th>Nome</th>
-                    <th>CPF</th>
-                  </tr>
-                </thead>
-                <tbody>
-                    <% @course.members_confirmed.each do |student| %>
-                        <tr>
-                            <td><%= student.name %></td>
-                            <td><%= student.cpf %></td>
-                        </tr>
-                    <% end %>
-                </tbody>
-            </table>
         </div>
     </div>
+    <table class="ui celled striped table">
+      <thead>
+        <tr>
+          <th>Nome</th>
+          <th>CPF</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @course.members_confirmed.each do |student| %>
+          <tr>
+            <td><%= student.name %></td>
+            <td><%= student.cpf %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
   </body>
 </html>
