--- a/app/views/home/admin_dashboard.html.erb
+++ b/app/views/home/admin_dashboard.html.erb
@@ -40,7 +40,26 @@
             </table>
         </div>
         <div class="ui bottom attached tab segment" data-tab="four">
-          Four
+           <table class="ui fixed single line celled table">
+                <thead>
+                    <tr>
+                        <th>Nome</th>
+                        <th>Arquivo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% User.articles.each do |user|  %>    
+                        <tr>
+                            <td>
+                                <%= user.name %>
+                            </td>
+                            <td>
+                                <%= link_to 'Download', user.article_url, class: 'ui button teal' %>  
+                            </td>
+                        </tr>
+                    <% end %>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
