modificado o layout dashboard

--- a/app/views/home/admin_dashboard.html.erb
+++ b/app/views/home/admin_dashboard.html.erb
@@ -66,3 +66,9 @@
 <script>
     $('.menu .item').tab();
 </script>
+
+<% if params[:tab] %>
+    <script>
+        $.tab('change tab', params[:tab]);
+    </script>
+<% end %>
