fixed erro no alert

--- a/app/views/layouts/_alert_messages.html.erb
+++ b/app/views/layouts/_alert_messages.html.erb
@@ -42,3 +42,12 @@
 </div>
 <p></p>
 <% end %>
+<script>
+  $('.message .close')
+  .on('click', function() {
+    $(this)
+      .closest('.message')
+      .transition('fade')
+    ;
+  });  
+</script>
